--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,3 +79,30 @@ font-size: 4em;
     font-family: sans-serif;
     font-size:large;
 }
+
+.image-cont
+{
+margin:40px;
+}
+
+.image-cont img
+{
+    height:50vh;
+    overflow: hidden;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    /* border : 1px solid white; */
+    border-radius: 500px;
+    
+    object-position: 0px 0px;
+}
+
+.desc
+{
+    font-size: 3em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#Work{
+    background-image: linear-gradient( black,hsl(171, 76%, 13%));
+}
